# advent-of-code-2020

./: .editorconfig  Cargo.toml  README.md  rustfmt.toml
src/: lib.rs
src/day01/: mod.rs  tests.rs
src/day02/: mod.rs  tests.rs
src/day03/: mod.rs  tests.rs
src/day04/: mod.rs  tests.rs
src/day05/: mod.rs  tests.rs
src/day06/: mod.rs  tests.rs
src/day07/: mod.rs  tests.rs
src/day08/: mod.rs  tests.rs
src/day09/: mod.rs  tests.rs
src/day10/: mod.rs  tests.rs
src/day11/: mod.rs  tests.rs
src/day12/: mod.rs  tests.rs
src/day13/: mod.rs  tests.rs
src/day14/: mod.rs  tests.rs
src/day15/: mod.rs  tests.rs
src/day16/: mod.rs  tests.rs
src/day17/: mod.rs  tests.rs
src/day18/: mod.rs  tests.rs
src/day19/: mod.rs  tests.rs
src/day20/: mod.rs  tests.rs
