[package]
name = "advent-of-code-2020"
version = "0.1.0"
authors = ["haraldmaida"]
license = "MIT"

description = """Solving Advent of Code Puzzles for 2020"""

readme = "README.md"
repository = "https://github.com/haraldmaida/advent-of-code-2020"
keywords = ["advent", "puzzle"]

edition = "2018"

[lib]
bench = false

[dependencies]
aoc-runner = "0.3"
aoc-runner-derive = "0.3"

[dev-dependencies]
proptest = "0.10"